<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#D7F1F1">

    <LinearLayout
        android:id="@+id/contentParentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal">

        <!-- TITLE -->

        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="🌐"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_login_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#4C5257"
            android:layout_marginTop="40dp"/>

        <!-- SUBTITLE -->
        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_login_subtitle"
            android:textSize="14sp"
            android:textColor="#777777"
            android:layout_marginTop="4dp"/>

        <!-- HELPER TEXT -->
        <TextView
            android:id="@+id/txtHelper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_login_helper"
            android:textSize="16sp"
            android:textColor="#4C5257"
            android:layout_marginTop="40dp"/>

        <!-- PARENT AVATAR -->
        <ImageView
            android:id="@+id/imgParentBig"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_parent"
            android:contentDescription="@string/parent_icon_desc"/>

        <!-- WHITE LOGIN CARD -->
        <LinearLayout
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_card_pg"
            android:layout_marginTop="30dp"
            android:padding="24dp"
            android:orientation="vertical"
            android:gravity="center"
            android:elevation="3dp"
            android:layout_marginBottom="8dp"
            android:clipToOutline="true">


        <!-- ID INPUT -->
            <EditText
                android:id="@+id/edtId"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_parent_id"
                android:inputType="number"
                android:maxLength="9"
                android:textSize="16sp"
                android:background="@drawable/password_bg"
                android:padding="12dp"
                android:layout_marginBottom="16dp"/>

            <!-- NAME INPUT -->
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_parent_name"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:background="@drawable/password_bg"
                android:padding="12dp"
                android:layout_marginBottom="20dp"/>

            <!-- LOGIN BUTTON -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:text="@string/btn_login"
                android:textColor="#085F63"
                android:textSize="16sp"
                android:background="@drawable/btn_login_rounded"
                android:backgroundTint="@null"
                android:elevation="0dp"/>

        </LinearLayout>

        <!-- SIGN UP -->
        <TextView
            android:id="@+id/txtGoToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/link_signup"
            android:textSize="16sp"
            android:textColor="#1A73E8"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:padding="6dp" />

        <!-- ADD CHILD -->
        <TextView
            android:id="@+id/txtAddChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/link_add_child"
            android:textSize="15sp"
            android:textColor="#1A73E8"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:padding="6dp" />

        <!-- CANCEL BUTTON -->
        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textSize="16sp"
            android:textColor="#4C5257"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</ScrollView>